diploma-report/pandora-box-infra/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pandora-box
  labels:
    app: pandora-box
