diploma-report/pandora-box-infra/infra/k8s/pbx-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pandora-box
  namespace: pandora-box
  labels:
    app: pandora-box
spec:
  serviceName: pandora-box
  replicas: 3
  selector:
    matchLabels:
      app: pandora-box
  template:
    metadata:
      labels:
        app: pandora-box
    spec:
      serviceAccountName: pandora-box
      imagePullSecrets:
        - name: yc-registry
      containers:
        - name: pandora-box
          image: __PBX_IMAGE__
          ports:
            - containerPort: 4000
              name: lid
            - containerPort: 4001
              name: portal
            - containerPort: 4369
              name: epmd
          command: ["/bin/sh", "-c"]
          args:
            - |
              SVC="pandora-box"
              BASE="pandora_box"
              NS="${K8S_NAMESPACE}"
              export RA_MEMBERS="${BASE}@${SVC}-0.${SVC}.${NS}.svc.cluster.local,${BASE}@${SVC}-1.${SVC}.${NS}.svc.cluster.local,${BASE}@${SVC}-2.${SVC}.${NS}.svc.cluster.local"
              export RELEASE_NODE="${BASE}@$(hostname -f)"
              echo "Starting PandoraBox node as ${RELEASE_NODE}"
              exec ./bin/pandora_box start

          volumeMounts:
            - name: data
              mountPath: /app/data

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
